# obsidian-to-org

./: README.md  obsidian-to-org.py  pyproject.toml
src/obsidian_to_org/: __main__.py
tests/: test_obsidian_to_org.py
